Cambia todos los breadcrumbs activos a normales para poder usar el link

--- a/app/Views/brands/brands.twig
+++ b/app/Views/brands/brands.twig
@@ -3,7 +3,7 @@
 {% block title %}Marcas{% endblock %}
 
 {% block breadcrumb %}
-    {{ bread.crumb_active('Marcas') }}
+    {{ bread.crumb(path_for('brands'), 'Marcas') }}
 {% endblock %}
 
 {% block content %}
