--- a/app/Views/invoices/creditofiscal.twig
+++ b/app/Views/invoices/creditofiscal.twig
@@ -3,7 +3,7 @@
 {% block title  %}Facturas{% endblock %}
 
 {% block breadcrumb %}
-    {{ bread.crumb_active('Créditos Fiscales') }}
+    {{ bread.crumb(path_for('creditofiscal'), 'Créditos Fiscales') }}
 {% endblock %}
 
 {% block content %}
