--- a/app/Views/unitsofmeasurement/measurements.twig
+++ b/app/Views/unitsofmeasurement/measurements.twig
@@ -3,7 +3,7 @@
 {% block title  %}Medidas{% endblock %}
 
 {% block breadcrumb %}
-    {{ bread.crumb_active('Medidas') }}
+    {{ bread.crumb(path_for('measurements'), 'Medidas') }}
 {% endblock %}
 
 {% block content %}
