--- a/app/Views/userconfig/userconfig.twig
+++ b/app/Views/userconfig/userconfig.twig
@@ -3,7 +3,7 @@
 {% block title  %}Ajustes{% endblock %}
 
 {% block breadcrumb %}
-    {{ bread.crumb_active('Configuración del Sistema') }}
+    {{ bread.crumb(path_for('ajustes'), 'Configuración del Sistema') }}
 {% endblock %}
 
 {% block content %}
