--- a/app/Views/warehouses/warehouses.twig
+++ b/app/Views/warehouses/warehouses.twig
@@ -3,7 +3,7 @@
 {% block title %}Almacenes{% endblock %}
 
 {% block breadcrumb %}
-    {{ bread.crumb_active('Almacenes') }}
+    {{ bread.crumb(path_for('warehouses'), 'Almacenes') }}
 {% endblock %}
 
 {% block content %}
