--- a/app/Views/clients/newcliente.twig
+++ b/app/Views/clients/newcliente.twig
@@ -4,7 +4,7 @@
 
 {% block breadcrumb %}
     {{ bread.crumb(path_for('clientes/personas'), 'Clientes') }}
-    {{ bread.crumb_active('Nuevo Contacto Cliente') }}
+    {{ bread.crumb(path_for('clientes/createform'), 'Nuevo Contacto Cliente') }}
 {% endblock %}
 
 {% block content %}
