--- a/app/Views/empresas/modificarempresa.twig
+++ b/app/Views/empresas/modificarempresa.twig
@@ -4,7 +4,7 @@
 
 {% block breadcrumb %}
     {{ bread.crumb(path_for('empresas'), 'Empresas') }}
-    {{ bread.crumb_active('Editar Empresa') }}
+    {{ bread.crumb(path_for('empresa', {id: empresaID}), 'Editar Empresa') }}
 {% endblock %}
 
 {% block content %}
