--- a/app/Views/empresas/newempresa.twig
+++ b/app/Views/empresas/newempresa.twig
@@ -4,7 +4,7 @@
 
 {% block breadcrumb %}
     {{ bread.crumb(path_for('empresas'), 'Empresas') }}
-    {{ bread.crumb_active('Nuevo Contacto Empresa') }}
+    {{ bread.crumb(path_for('empresas/createform'), 'Nuevo Contacto Empresa') }}
 {% endblock %}
 
 {% block content %}
