Cambia modal de cantidad y precio de detalle para aceptar tecla enter

--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -205,7 +205,7 @@
                                 </span>
                             </div>
                         </div>
-                        <button type="button" id="btnCrearDetalle" class="btn btn-block btn-info">
+                        <button type="submit" id="btnCrearDetalle" class="btn btn-block btn-info">
                             <span class="glyphicon glyphicon-plus-sign"></span>
                             Agregar Detalle
                         </button>
