--- a/app/Views/invoices/facturabusquedaproducto.twig
+++ b/app/Views/invoices/facturabusquedaproducto.twig
@@ -14,11 +14,7 @@
                 <input type="text" name="nombreProducto" id="nombreProducto" class="form-control">
                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
             </div>
-            <button type="button" class="btn btn-info btn-block submit-form-with-method"
-                    data-action="{{ path_for('products') }}"
-                    data-method="get"
-                    data-triggerevent="factura-busca-producto"
-                    data-targetform="#buscarProductoForm">
+            <button type="submit" class="btn btn-info btn-block">
                 <span class="glyphicon glyphicon-search"></span>
                 Buscar
             </button>
