--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -89,7 +89,7 @@
                             <tbody>
                             {% for product in products %}
                                 <tr class="anchorize" data-href="{{ path_for('products/update', {id: product.ProductoID}) }}">
-                                    <td>{{ product.CategoriaProductoID }}{{ product.CodigoProducto }}</td>
+                                    <td>{{ product.CodigoProducto }}</td>
                                     <td>{{ product.NombreCategoria }}</td>
                                     <td>{{ product.NombreMarca }}</td>
                                     <td>{{ product.Descripcion }}</td>
