Cambia búsqueda de ingreso de productos para mostrarlos sin prefijo categoría

--- a/app/Views/ingresos/ingresos.twig
+++ b/app/Views/ingresos/ingresos.twig
@@ -73,7 +73,7 @@
                             <tbody>
                             {% for ingreso in ingresos %}
                             <tr class="anchorize" data-href="{{ path_for('ingresos') }}/id/{{ ingreso.DetalleIngresosID }}">
-                                <td>{{ ingreso.CategoriaProductoID }}{{ ingreso.CodigoProducto }}</td>
+                                <td>{{ ingreso.CodigoProducto }}</td>
                                 <td>{{ ingreso.Proveedor }}</td>
                                 <td>{{ ingreso.Cantidad }}</td>
                                 <td>{{ ingreso.PrecioUnitario }}</td>
