Cambia modal para crear detalle, ahora muestra el producto seleccionado

--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -180,6 +180,13 @@
                 <div class="modal-body">
                     <form action="#" id="cantidadDetalleForm">
                         <div class="form-group">
+                            <label>Producto Seleccionado:</label>
+                            <p class="form-control-static">
+                                [<span id="outputSeleccionadoCodigo"></span>]
+                                <span id="outputSeleccionadoDescripcion"></span>
+                            </p>
+                        </div>
+                        <div class="form-group">
                             <label for="almacenID">Almacén:</label>
                             <select name="almacenID" id="almacenID" class="form-control"></select>
                         </div>
