--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -254,6 +254,7 @@
         <tr class="trigger-event" data-productoid="{{productoID}}" data-event="factura-producto-selected">
             <td>{{codigoProducto}}</td>
             <td>{{nombreCategoria}}</td>
+            <td>{{nombreMarca}}</td>
             <td>{{descripcion}}</td>
             <td>{{cantidad}}</td>
             <td>{{precio}}</td>
