--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -11,7 +11,7 @@
     </div>
     <div id="main-navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            {% set facturacion_urls = [path_for('invoices/createform'), path_for('creditofiscal/createform'), path_for('invoices'), path_for('creditofiscal'), path_for('tirajes'), path_for('tirajes/createform')] %}
+            {% set facturacion_urls = [path_for('cotizacion'), path_for('invoices/createform'), path_for('creditofiscal/createform'), path_for('invoices'), path_for('creditofiscal'), path_for('tirajes'), path_for('tirajes/createform')] %}
             <li class="dropdown {% if uri_path in facturacion_urls %}active{% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-list-alt"></span>
@@ -35,6 +35,12 @@
                         <a href="{{ path_for('tirajes/createform') }}">
                             <span class="glyphicon glyphicon-plus-sign"></span>
                             Nuevo Tiraje de Factura
+                        </a>
+                    </li>
+                    <li class="{% if uri_path == path_for('cotizacion') %}active{% endif %}">
+                        <a href="{{ path_for('cotizacion') }}">
+                            <span class="glyphicon glyphicon-usd"></span>
+                            Nueva Cotización
                         </a>
                     </li>
                     <li class="{% if uri_path == path_for('invoices') %}active{% endif %}">
