--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -109,7 +109,7 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label for="valorCostoActualTotal">Costo Actual del Producto</label>
+                                        <label for="valorCostoActualTotal">Costo del Producto (mas IVA)</label>
                                         <div class="input-group">
                                             <span class="input-group-addon">
                                                 <span class="glyphicon glyphicon-usd"></span>
@@ -118,7 +118,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="utilidadProducto">Utilidad del Producto</label>
+                                        <label for="utilidadProducto">Ganancia</label>
                                         <div class="input-group">
                                             <span class="input-group-addon">
                                                 <span class="glyphicon glyphicon-usd"></span>
@@ -128,26 +128,22 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label for="precioVentaProducto">Precio de Venta</label>
+                                    <div class="form-group {% if not input.excentoIvaProducto  %}hidden{% endif %}">
+                                        <label for="precioVentaProducto">Precio de Venta a Consumidor (exento IVA)</label>
                                         <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <span class="glyphicon glyphicon-usd"></span>
-                                            </span>
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-usd"></span>
+                                        </span>
                                             <input type="number" value="{{ (input.utilidadProducto ?? 0 + input.valorCostoActualTotal ?? 0)|number_format(4) }}" class="form-control" id="precioVentaProducto" step="any">
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label for="precioVentaIVAProducto">Precio de Venta + IVA</label>
+                                    <div class="form-group {% if input.excentoIvaProducto  %}hidden{% endif %}">
+                                        <label for="precioVentaIVAProducto">Precio de Venta a Consumidor (mas IVA)</label>
                                         <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <span class="glyphicon glyphicon-usd"></span>
-                                            </span>
-                                            {% if input.excentoIvaProducto %}
-                                                <input disabled type="text" value="Producto exento de IVA" class="form-control" id="precioVentaIVAProducto" step="any" data-iva="{{ porcentajeIVA }}">
-                                            {% else %}
-                                                <input type="number" value="{{ ((input.utilidadProducto ?? 0 + input.valorCostoActualTotal ?? 0) * (1 + porcentajeIVA / 100))|number_format(4) }}" class="form-control" id="precioVentaIVAProducto" step="any" data-iva="{{ porcentajeIVA }}">
-                                            {% endif %}
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-usd"></span>
+                                        </span>
+                                            <input type="number" value="{{ ((input.utilidadProducto ?? 0 + input.valorCostoActualTotal ?? 0) * (1 + porcentajeIVA / 100))|number_format(4) }}" class="form-control" id="precioVentaIVAProducto" step="any" data-iva="{{ porcentajeIVA }}">
                                         </div>
                                     </div>
                                 </div>
