--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -183,6 +183,12 @@
                     </li>
                 </ul>
             </li>
+            <li class="{% if uri_path == path_for('reportes') %}active{% endif %}">
+                <a href="{{ path_for('reportes') }}">
+                    <span class="glyphicon glyphicon-th-list"></span>
+                    Reportes
+                </a>
+            </li>
             <li class="{% if uri_path == path_for('ajustes') %}active{% endif %}">
                 <a href="{{ path_for('ajustes') }}">
                     <span class="glyphicon glyphicon-cog"></span>
