Agrega link para cerrar sesión

--- a/app/Views/userconfig/userconfig.twig
+++ b/app/Views/userconfig/userconfig.twig
@@ -26,6 +26,20 @@
             </div>
         </div>
         <div class="row">
+            {# CERRAR SESIÓN #}
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Cerrar Sesión</h2>
+                    </div>
+                    <div class="panel-body">
+                        <a href="{{ path_for('login') }}" class="btn btn-block btn-info">
+                            <span class="glyphicon glyphicon-log-out"></span>
+                            Cerrar Sesión
+                        </a>
+                    </div>
+                </div>
+            </div>
             {# AJUSTAR IVA #}
             <div class="col-sm-4">
                 <div class="panel panel-primary">
