--- a/app/Views/templates/base.twig
+++ b/app/Views/templates/base.twig
@@ -34,6 +34,7 @@
     <script src="/js/submit-form-with-method.js" defer></script>
     <script src="/js/click-trigger-event.js" defer></script>
     <script src="/js/modal-eliminar.js" defer></script>
+    <script src="/js/cover-background.js" defer></script>
 </head>
 <body>
     {% include 'templates/navbar.twig' %}
