Cambia la vista del homepage para hacerla más bonita

--- a/app/Views/homepage.twig
+++ b/app/Views/homepage.twig
@@ -7,8 +7,11 @@
 {% endblock %}
 
 {% block content %}
-    <div class="jumbotron text-center">
-        <h1>Sistema de Inventarios</h1>
-        <p>*Trabajo en Progreso*</p>
+    <div class="jumbotron text-center text-light">
+        <img class="image-background-cover" src="http://loremflickr.com/1280/720/business,office/all" alt="Wellcome Image Background">
+        <div class="bg-shade">
+            <h1>Bienvenid@</h1>
+            <p>Sistema de Control de Inventarios y Facturación</p>
+        </div>
     </div>
 {% endblock %}
