Agrega imagen de la marca de la empresa como logo del navbar

--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -7,7 +7,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a href="{{ path_for('homepage') }}" class="navbar-brand">Logotipo</a>
+        <a href="{{ path_for('homepage') }}" class="navbar-brand">
+            <img src="/img/logo_arcoiris.jpg" alt="Brand">
+        </a>
     </div>
     <div id="main-navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
