--- a/public/css/utility.css
+++ b/public/css/utility.css
@@ -35,6 +35,15 @@ body {
     padding-top: 50px;
 }
 
+.navbar-brand {
+    height: 50px;
+}
+
+.navbar-brand img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .text-light {
     color: white;
 }
