Hace más cortos algunos nombres de menús del navbar

--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -17,7 +17,7 @@
             <li class="dropdown {% if uri_path in facturacion_urls %}active{% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-list-alt"></span>
-                    Facturación
+                    Facturas
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
@@ -121,7 +121,7 @@
             <li class="dropdown {% if uri_path in warehouses_urls %}active{% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-home"></span>
-                    Almacenes
+                    Almacén
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
