--- a/app/Views/tirajes/nuevotiraje.twig
+++ b/app/Views/tirajes/nuevotiraje.twig
@@ -21,18 +21,27 @@
                 <div class="panel-heading">Introduce un nuevo tiraje</div>
                 <div class="panel-body">
                     <form action="{{ path_for('tirajes/createform') }}" method="post">
-                        <div class="form-group has-feedback has-clear">
+                        <div class="form-group has-feedback has-clear {% if failedInputs.codigoTiraje %}has-error{% endif %}">
                             <label for="codigoTiraje">Código</label>
-                            <input type="text" name="codigoTiraje" value="{% if saved is same as(false) %}{{ input.codigoTiraje }}{% endif %}" class="form-control" id="codigoTiraje" maxlength="50">
+                            <input type="text" name="codigoTiraje" value="{% if saved is same as(false) %}{{ input.codigoTiraje }}{% endif %}" class="form-control" id="codigoTiraje" maxlength="50" required>
                             <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoTiraje %}hidden{% endif %}"></span>
+                            {% if failedInputs.codigoTiraje %}
+                                <span class="help-block">Debe ser entre 1 y 50 caracteres.</span>
+                            {% endif %}
                         </div>
-                        <div class="form-group">
+                        <div class="form-group {% if failedInputs.tirajeDesde %}has-error{% endif %}">
                             <label for="tirajeDesde">Correlativo Inicial</label>
-                            <input type="number" name="tirajeDesde" value="{% if saved is same as(false) %}{{ input.tirajeDesde }}{% else %}1{% endif %}" class="form-control" id="tirajeDesde" step="1">
+                            <input type="number" name="tirajeDesde" value="{% if saved is same as(false) %}{{ input.tirajeDesde }}{% else %}1{% endif %}" class="form-control" id="tirajeDesde" step="1" min="1">
+                            {% if failedInputs.tirajeDesde %}
+                                <span class="help-block">Debe ser número entero mayor de cero.</span>
+                            {% endif %}
                         </div>
-                        <div class="form-group">
+                        <div class="form-group {% if failedInputs.tirajeHasta %}has-error{% endif %}">
                             <label for="tirajeHasta">Correlativo Final</label>
-                            <input type="number" name="tirajeHasta" value="{% if saved is same as(false) %}{{ input.tirajeHasta }}{% else %}1{% endif %}" class="form-control" id="tirajeHasta" step="1">
+                            <input type="number" name="tirajeHasta" value="{% if saved is same as(false) %}{{ input.tirajeHasta }}{% else %}1{% endif %}" class="form-control" id="tirajeHasta" step="1" min="1">
+                            {% if failedInputs.tirajeHasta %}
+                                <span class="help-block">Debe ser número entero mayor de cero.</span>
+                            {% endif %}
                         </div>
                         <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-plus-sign"></span> Crear Tiraje</button>
                     </form>
