--- a/app/Views/products/ingresarproducto.twig
+++ b/app/Views/products/ingresarproducto.twig
@@ -11,7 +11,7 @@
                     {% endfor %}
                 </select>
             </div>
-            <div class="form-group">
+            <div class="form-group {% if failedInputs.almacenID %}has-error{% endif %}">
                 <label for="almacenID">Elige el Almacén a Ingresar</label>
                 <select name="almacenID" id="almacenID" class="form-control">
                     <option value="">Elige un Almacén</option>
@@ -19,15 +19,21 @@
                         <option value="{{ almacen.AlmacenID }}">{{ almacen.NombreAlmacen }}</option>
                     {% endfor %}
                 </select>
+                {% if failedInputs.almacenID %}
+                    <span class="help-block">Por favor, elige un almacén.</span>
+                {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group {% if failedInputs.cantidadIngreso %}has-error{% endif %}">
                 <label for="cantidadIngreso">Cantidad a Ingresar</label>
                 <div class="input-group">
                     <input type="number" name="cantidadIngreso" value="{{ input.cantidadIngreso ?? 0 }}" class="form-control" id="cantidadIngreso">
                     <span class="input-group-addon">{{ input.medidaProducto }}</span>
                 </div>
+                {% if failedInputs.cantidadIngreso %}
+                    <span class="help-block">Debe ser un número entero, y no debe ser cero.</span>
+                {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group {% if failedInputs.valorPrecioUnitario %}has-error{% endif %}">
                 <label for="valorPrecioUnitario">Costo Unitario</label>
                 <div class="input-group">
                     <span class="input-group-addon">
@@ -35,6 +41,9 @@
                     </span>
                     <input type="number" name="valorPrecioUnitario" value="0" class="form-control" id="valorPrecioUnitario" min="0" step="any">
                 </div>
+                {% if failedInputs.valorPrecioUnitario %}
+                    <span class="help-block">Debe ser un número mayor a 0.0001</span>
+                {% endif %}
             </div>
             <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-plus"></span> Ingresar el Producto</button>
         </form>
